<resources>
    <string name="app_name">GaoKao366ToUser</string>
    <string name="action_settings">Settings</string>


    <string name="hello_world">Hello world!</string>
    <string name="network_is_not_available">网络不可用，请检查网络连接</string>
    <string name="pull_to_refresh_pull_label">下拉刷新&#8230;</string>
    <string name="pull_to_refresh_release_label">松开刷新&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">正在加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="pull_to_refresh_click_more">加载更多</string>
    <string name="last_updated">最近更新:</string>
    <string name="please_login_first">您当前尚未登录，请先登录</string>
    <string name="server_error">服务器连接失败</string>
    <string name="token_invalible">用户信息失效</string>
    <string name="dataEmpty">暂无数据</string>

    <!-- 下拉刷新 -->
    <string name="loading">正在加载...</string>
    <string name="refreshing">正在刷新...</string>
    <string name="upToRefresh">松开刷新</string>
    <string name="downToRefresh">下拉刷新</string>
    <string name="refreshOk">刷新成功</string>
    <string name="xlistview_footer_loading">加载中&#8230;</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <!-- 登录 -->
    <string name="login_sucess">登录成功</string>
    <string name="autoLogin">自动登录</string>
    <string name="userLogin">用户登录</string>
    <string name="regist">注册</string>
    <string name="bindPhoneNum">绑定手机号</string>
    <string name="phoneInput">请输入手机号</string>
    <string name="codeInput">请输入验证码</string>
    <string name="smscode_error">验证码不正确</string>
    <string name="pwd_error">密码为6~32位英文数字组合</string>
    <string name="phone_error">手机号码格式不正确</string>
    <string name="phone_empty">请输入手机号</string>
    <string name="pwd_empty">请输入密码</string>
    <string name="pwdInput">输入密码</string>
    <string name="pwdReset">重置密码</string>
    <string name="getCode">获取验证码</string>
    <string name="password">密码</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="phone">手机号码</string>
    <string name="passwordAgen">再次输入密码</string>
    <string name="passwordHint">6-16位登录密码</string>
    <string name="nextStep">下一步</string>
    <string name="complete">完成</string>
    <string name="name">姓名:</string>
    <string name="sex">性别:</string>
    <string name="age">年龄:</string>
    <string name="gameName">召唤师名称:</string>
    <string name="gameServer">服务器名称:</string>
    <string name="showBitch">个性签名:</string>
    <string name="bindPhone">绑定手机:</string>
    <string name="useCombineAccount">使用合作账号登录</string>
    <string name="otherLoginStaus">其他登陆方式</string>


    <!-- 设置 -->
    <string name="setting">设置</string>
    <string name="about">关于我们</string>
    <string name="aboutus">关于我们</string>
    <string name="aboutme">与我相关</string>
    <string name="help">帮助</string>
    <string name="help1">帮助1</string>
    <string name="help2">帮助2</string>
    <string name="update">版本更新</string>
    <string name="clear">清除缓存</string>
    <string name="quit">安全退出</string>
    <string name="versioncode">版本号</string>
    <string name="isLastest">已是最新版本</string>
    <string name="checkingUpdate">正在检查新版本</string>
    <string name="downLoad">发现新版本,点击下载</string>
    <string name="downLoading">下载中</string>
    <string name="downLoadOver">下载完成,点击安装</string>
    <string name="downLoadExits">已存在更新文件,点击安装</string>
    <string name="downLoadPause">暂停</string>
    <string name="downLoadFail">下载失败</string>
    <string name="downLoadStart">等待下载...</string>
    <string name="commit">提交</string>

    <!-- 我的 -->
    <string name="mine">我的</string>
    <string name="personInfo">基本信息</string>
    <string name="myOrder">我的订单</string>
    <string name="myCheck">我的审核</string>
    <string name="onlineCheckIn">网上值机</string>
    <string name="feedBack">信息反馈及意见</string>
    <string name="complain">投诉处理</string>
    <string name="onlineCallCenter">在线客服</string>
    <string name="locationPlace">北京</string>
    <string name="notice">公告</string>
    <string name="hot_hotel">热门酒店</string>


    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>


    <string name="zhenti">历年真题练习</string>
    <string name="subscribe">订阅任务</string>
    <string name="seeall">查看全部</string>



    <string name="home">首页</string>
    <string name="coach">366辅导</string>
    <string name="msg">消息</string>


</resources>
